Ili934x modified and extended with layout class and Memory Access Control flags.

--- a/src/devices/Ili934x/Ili934x.csproj
+++ b/src/devices/Ili934x/Ili934x.csproj
@@ -5,6 +5,7 @@
     <!--Disabling default items so samples source won't get built by the main library-->
     <EnableDefaultItems>false</EnableDefaultItems>
     <Nullable>enable</Nullable>
+    <AssemblyName>Iot.Device.Ili934x</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
